# ArbEngine-Pro

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Implementation_Guide.docx  README.md  docker-compose.yml  prd_part1.js  progress.txt
Implementation_Guide_extracted/docProps/: core.xml
Implementation_Guide_extracted/word/: document.xml  styles.xml
crates/api/: Cargo.toml
crates/api/src/: main.rs  ws.rs
crates/bot/: Cargo.toml
crates/bot/src/: execution.rs  flash_loan_tx_builder.rs  jito.rs  main.rs  wallet.rs
crates/bot/src/api/: metrics.rs
crates/bot/src/logging/: mod.rs
crates/bot/src/metrics/: prometheus.rs
crates/collector/: Cargo.toml
crates/collector/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: arbitrage.rs  config.rs  error.rs  flash_loan.rs  history.rs  lib.rs  pathfinder.rs  risk.rs  simulation_logs.rs  tests.rs  types.rs
crates/core/src/alt/: manager.rs  mod.rs
crates/core/src/cache/: mmap_cache.rs  mod.rs
crates/core/src/database/: mod.rs  timescale.rs
crates/core/src/dex/: jupiter.rs  mod.rs  orca.rs  raydium.rs
crates/core/src/http/: pool.rs
crates/core/src/jito/: client.rs  mod.rs
crates/core/src/parsers/: fast_json.rs  mod.rs
crates/core/src/pathfinding/: mod.rs  simd_profit.rs
crates/core/src/pricing/: hybrid_fetcher.rs  mod.rs  parallel_fetcher.rs
crates/core/src/risk/: circuit_breaker.rs  var.rs  volatility.rs
crates/core/src/streaming/: mod.rs  ws_manager.rs
crates/dex-plugins/: Cargo.toml
crates/dex-plugins/src/: lib.rs  lifinity.rs  meteora.rs  phoenix.rs
crates/flash-loans/: Cargo.toml
crates/flash-loans/src/: lib.rs  metrics.rs  safety.rs  solend.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: latency.rs  lib.rs  statistical.rs
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: OpportunitiesTable.css  OpportunitiesTable.tsx  PriceComparison.css  PriceComparison.tsx  ProfitChart.css  ProfitChart.tsx  SimulationBanner.css  SimulationBanner.tsx  StatsCards.css  StatsCards.tsx  StatusBar.css  StatusBar.tsx
docs/: dry-run-log.txt  presentation-report.md  readable_logs.md
docs/Upgrade Plans/: EXECUTIVE_SUMMARY.md  UPGRADE_PLAN.md  UPGRADE_PLAN_PART2.md  UPGRADE_PLAN_PART3.md
docs/Upgrade Plans/files/: FULL_VALIDATION_REPORT.md  PHASE_11_IMPLEMENTATION_GUIDE.md
files/: Solana_Arbitrage_Architecture.docx  Solana_Arbitrage_PRD.docx
migrations/: 001_create_timescale_schema.sql  20260131_initial_schema.sql
