[package]
name = "solana-arb-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
solana-arb-core = { path = "../core", features = ["http"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
bs58 = { workspace = true }
base64 = "0.22"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
rand = "0.8"
