[package]
name = "solana-arb-collector"
version.workspace = true
edition.workspace = true

[[bin]]
name = "collector"
path = "src/main.rs"

[dependencies]
solana-arb-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
