[package]
name = "solana-arb-dex-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-arb-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = { workspace = true }
