[package]
name = "solana-arb-flash-loans"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-arb-core = { path = "../core" }
solana-sdk = { workspace = true }
solana-program = { version = "1.18" }
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = "2.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
